--- a/includes/style.css
+++ b/includes/style.css
@@ -334,6 +334,7 @@ text-align: center;
 #placeName{
 	height: 40px;
 	width:200px;
+	margin-right: 14px;
 }
 
 /*add Place*/
@@ -349,6 +350,9 @@ text-align: center;
 	margin-right: 30px;
 }
 
+.placeForm input{
+	font-family: 'trashim_clmbold',Arial;
+}
 #fileDisplayArea img {
     border-radius: 5px;
     border: 5px solid white;
@@ -429,7 +433,11 @@ height: 108px;
 .formFilter{
 	display: block;
 	float:right;
-	margin-top:-5px;
+	height:30px;
+	width:120px;
+	margin-right:15px;
+	border-radius:5px;
+	font-family: 'trashim_clmbold',Arial;
 }
 
 .categoryP{
@@ -439,6 +447,7 @@ height: 108px;
 
 #autocomplete{
 	margin-top:7px;
+	margin-right:14px;
 }
 
 .uploadPhoto{
