--- a/includes/style.css
+++ b/includes/style.css
@@ -96,7 +96,6 @@ main{
     float: left;
     margin-left: 0px;
     margin-top: 81px;
-    color: #FFFFFF;
 }
 
 
@@ -116,10 +115,6 @@ h3{
 	width:670px;
 	float:right;
 	margin-top:38px;
-}
-
-#target h3{
-	color:#FFFFFF;
 }
 
 .filterBox{
@@ -329,36 +324,17 @@ text-align: center;
 	direction: rtl;
 	font-size: 20px;
 	width:100px;
-	height:50px;
+	height:30px;
 	font-family: 'trashim_clmbold','arial';
 	color: #FAFBF6;
 	margin-top: -25px;
 }
 
-#indexAside h4{
-	direction: rtl;
-	width:100px;
-	height:50px;
-	font-family: 'trashim_clmbold','arial';
-	color: #FAFBF6;
-    margin-top: -40px;
-    margin-right: 60px;
-}
-
-
 #placeName{
-	margin-right: 14px;
+	height: 40px;
+	width:200px;
 }
 
-#indexAside img{
-	float:left;
-	margin-left:10px;
-}
-
-#asideDescription{
-	color:#FFFFFF;
-	margin-top:10px;
-}
 /*add Place*/
 .placeForm{
 	width:1000px;
@@ -372,28 +348,19 @@ text-align: center;
 	margin-right: 30px;
 }
 
-.placeForm input{
-	font-family: 'trashim_clmbold',Arial;
-}
-
 #fileDisplayArea img {
     border-radius: 5px;
     border: 5px solid white;
     margin-top: 10px;
-    margin-right: 100px;
     width: 166px;
+    position: absolute;
+    left: 0;
+    bottom: 72px;
 }
-
-#placeForm img {
-    border-radius: 5px;
-    border: 5px solid white;
-    margin-top: 10px;
-    width: 166px;
-}
-
 .placeForm select{
 	background: #FFFFFF;
 	color: #000000;
+
 }
 
 .placeForm input{
@@ -405,9 +372,8 @@ text-align: center;
 	color:#000000;
 }
 
-#tags {
-    margin-top: 129px;
-    margin-right: 14px;
+#tags{
+	margin-top: 100px;
 }
 
 .tagsClass{
@@ -461,11 +427,7 @@ height: 108px;
 .formFilter{
 	display: block;
 	float:right;
-	height:30px;
-	width:120px;
-	margin-right:15px;
-	border-radius:5px;
-	font-family: 'trashim_clmbold',Arial;
+	margin-top:-5px;
 }
 
 .categoryP{
@@ -475,8 +437,6 @@ height: 108px;
 
 #autocomplete{
 	margin-top:7px;
-	margin-right:14px;
-	border-radius:5px;
 }
 
 .uploadPhoto{
@@ -546,18 +506,15 @@ input.addBtn {
 }
 
 #placePageName{
-	float:right;
 	display:inline-block;
 	margin-right: 400px;
     margin-top:50px; 
 }
 
-#placePageType {
-    display: inline-block;
-    float: right;
-    margin-top: 65px;
-   }
-   
+#placePageType{
+	display: inline-block;
+}
+
 #placePagePic{
 	margin-right:30px;
 	margin-top:30px;
@@ -568,91 +525,22 @@ input.addBtn {
 
 #pic{
 	height: 240px;
-	margin(0 0 0 30px);
-}
-
-#upload{
-	width:178px;
+	margin(10px, 0 0 30px);
 }
 
 
-#description {
-    float: right;
-    margin-right: 310px;
-    margin-top: -236px;
-    width: 200px;
-   }
-
-#address {
-    float: right;
-    margin-right: 310px;
-    margin-top: -110px;
-}
-
-#distance {
-    float: right;
-    margin-right: 563px;
-    margin-top: -113px;
-}
-	
-.addresses{
-    float: right;
-    margin-right: 310px;
-    margin-top: -125px;
+#description{
+    position: absolute;
+    margin-right: 338px;
+    top: 347px;
+	width: 200px;
+	float:right;
 }
 
 #add-image{
 	margin-right:30px;
 	margin-top: -40px;
 }
-
-.myLabel {
-    float: right;
-    margin-right: 184px;
-    margin-top: -23px;
-    height: 22px;
-	-moz-box-shadow:inset 0px 1px 3px 0px #91b8b3;
-	-webkit-box-shadow:inset 0px 1px 3px 0px #91b8b3;
-	box-shadow:inset 0px 1px 3px 0px #91b8b3;
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #768d87), color-stop(1, #6c7c7c));
-	background:-moz-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
-	background:-webkit-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
-	background:-o-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
-	background:-ms-linear-gradient(top, #768d87 5%, #6c7c7c 100%);
-	background:linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#768d87', endColorstr='#6c7c7c',GradientType=0);
-	background-color:#768d87;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:1px;
-	border:1px solid #566963;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family:'trashim_clmbold',Arial;
-	font-size:15px;
-	font-weight:bold;
-	padding:4px 20px;
-	text-decoration:none;
-	text-shadow:0px -1px 0px #2b665e;
-}
-
-.myLabel:hover {
-	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #6c7c7c), color-stop(1, #768d87));
-	background:-moz-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
-	background:-webkit-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
-	background:-o-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
-	background:-ms-linear-gradient(top, #6c7c7c 5%, #768d87 100%);
-	background:linear-gradient(to bottom, #6c7c7c 5%, #768d87 100%);
-	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#6c7c7c', endColorstr='#768d87',GradientType=0);
-	background-color:#6c7c7c;
-}
-
-.myLabel:active {
-	position:relative;
-	top:1px;
-}
-
 
 #tags span{
 	padding-right: 13px;
@@ -819,20 +707,11 @@ input.addBtn {
     font-weight: bold;
     font-family: 'trashim_clmbold', Arial;
     font-size: 20px;
-    margin-right: 30px;
+    margin-right: -259px;
 }
 
 
 /*MyPage*/
-
-#helloUser img {
-    float: left;
-    max-width: 50px;
-    max-height: 50px;
-    margin-top: -33px;
-    border-radius: 50px;
-    margin-right: 14px;
-}
 
  #myPage{
  	margin-top:200px;
@@ -1000,6 +879,7 @@ input.addBtn {
 .Top5{
 	text-align: center;
 	margin-top: 60px;
+	color : #FFFFFF;
 }
 
 .userClass{
@@ -1088,19 +968,6 @@ input.addBtn {
 
 .status4{
 	color:#C425FF;
-}
-
-.ui-dialog div {
-    direction: rtl;
-}
-
-button.ui-dialog-titlebar-close {
-    left: 10px;
-    right: initial !important;
-}
-
-.ui-dialog-buttonset {
-    float: left !important;
 }
 
 
