--- a/includes/style.css
+++ b/includes/style.css
@@ -65,7 +65,7 @@ a{
 	float: left;
     border-radius: 4px;
     border: none;
-    margin: 22 0px 0 -112px;
+    margin: 2px 0px 0 2px;
     height: 21px;
     width: 72px;
     background-image: url(../images/logout.jpg);
@@ -311,12 +311,12 @@ text-align: center;
     float: left;
     display: block;
     margin-left: 30px;
-    margin-top: 97px;
+    margin-top: 82px;
     border-style: solid;
     border-color: #FAFBF6;
     font-family: 'trashim_clmbold',Arial;
     border-width: 1px;
-    height: 446px;
+    height: 460px;
     width: 250px;
 }
 
@@ -520,7 +520,8 @@ input.addBtn {
 	margin-top:30px;
 	height: 294px;
 	width: 260px;
-	overflow: hidden;	
+	overflow: hidden;
+	
 }
 
 #pic{
@@ -535,11 +536,6 @@ input.addBtn {
     top: 347px;
 	width: 200px;
 	float:right;
-}
-
-#add-image{
-	margin-right:30px;
-	margin-top: -40px;
 }
 
 #tags span{
@@ -879,7 +875,7 @@ input.addBtn {
 .Top5{
 	text-align: center;
 	margin-top: 60px;
-	color : #FFFFFF;
+	color: #FFFFFF;
 }
 
 .userClass{
@@ -933,41 +929,8 @@ input.addBtn {
 	width:100%;
 	height:60px;
 }
-
 .links{
 	height:15px;
 	float:right;
 	margin:15px;
 }
-
-.orange2{
-	margin-top: 65px;
-	margin-right: 150px;
-}
-
-.stats{
-    float: right;
-    margin-right: 30px;
-    margin-top: 47px;
-}
-
-.stats > p{
-	float:right;
-	margin-right: 30px;
-	margin-top: 20px;
-	font-size:20px;
-}
-
-.status2{
-	color:#FF235A;
-}
-
-.status3{
-	color:#4CFF67;
-}
-
-.status4{
-	color:#C425FF;
-}
-
-
