--- a/includes/style.css
+++ b/includes/style.css
@@ -94,8 +94,15 @@ main{
 
 #helloUser {
     float: left;
-    margin-left: 0px;
-    margin-top: 81px;
+    color: #FFFFFF;
+    margin-top:80px;
+}
+
+#helloUser img{
+    border-radius: 50%;
+    height: 50px;
+    float: left;
+    margin-top: -33px;
 }
 
 
@@ -352,7 +359,7 @@ text-align: center;
 
 .asideRating{
 	margin-right: 10px; 
-	margin-top: -85px;
+	margin-top: -85hellopx;
 	float:right;
 }
 
