--- a/includes/style.css
+++ b/includes/style.css
@@ -566,11 +566,108 @@ input.addBtn {
 
 
 #description{
-    position: absolute;
     margin-right: 338px;
-    top: 347px;
-	width: 200px;
+    margin-top: -256px;
+    width: 200px;
+    float: right;
+}
+
+.addresses{
+    margin-right: 338px;
+    margin-top: -180px;
+    width: 200px;
+    float: right;
+}
+
+#address{
+	margin-right: 338px;
+    margin-top: -160px;
+    width: 200px;
+    float: right;
+}
+
+#distance{
+    margin-right: 562px;
+    margin-top: -165px;
+    float: right;
+}
+
+#add-image{
 	float:right;
+	margin-right:30px;
+	margin-top:-40px;
+	font-family:Arial;
+}
+
+#fileDisplayArea2 img {
+    border-radius: 5px;
+    border: 5px solid #FFFFFF;
+    margin-top: 10px;
+    margin-right: -1px;
+    width: 100px;
+}
+
+.fileUpload {
+    box-shadow: inset 0px 1px 3px 0px #91b8b3;
+    background: linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+    border-radius: 5px;
+    border: 1px solid #566963;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: 'trashim_clmbold', Arial;
+    font-weight: bold;
+    padding: 5px 9px;
+    text-decoration: none;
+    text-shadow: 0px -1px 0px #2b665e;
+    float: right;
+    margin-right: 0px;
+    margin-top: 15px;
+}
+
+.fileUpload input.upload {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    cursor: pointer;
+    opacity: 0;
+    filter: alpha(opacity=0);
+}
+
+.myLabel {
+    box-shadow: inset 0px 1px 3px 0px #91b8b3;
+    background: linear-gradient(to bottom, #768d87 5%, #6c7c7c 100%);
+    border-radius: 5px;
+    border: 1px solid #566963;
+    display: inline-block;
+    cursor: pointer;
+    color: #ffffff;
+    font-family: 'trashim_clmbold', Arial;
+    font-weight: bold;
+    padding: 6px 36px;
+    text-decoration: none;
+    text-shadow: 0px -1px 0px #2b665e;
+    float: right;
+    margin-right: 0px;
+    margin-top: 5px;
+}
+
+.myLabel:hover {
+	background-color:#6c7c7c;
+}
+
+.myLabel:active {
+	position:relative;
+	top:1px;
+}
+
+.tagsLocation{
+	float:right;
+	margin-right:200px;	
+	width:700px;
 }
 
 #tags span{
@@ -732,14 +829,14 @@ input.addBtn {
 }
 
 #chooseTag{
-    float: right;
+     float: right;
     display: block;
     padding: 5px;
-    margin-top: 60px;
+    margin-top: 40px;
     font-weight: bold;
     font-family: 'trashim_clmbold', Arial;
     font-size: 20px;
-    margin-right: -259px;
+    margin-right: 30px;
 }
 
 
