--- a/includes/style.css
+++ b/includes/style.css
@@ -319,7 +319,7 @@ text-align: center;
     float: left;
     display: block;
     margin-left: 30px;
-    margin-top: 82px;
+    margin-top: 92px;
     border-style: solid;
     border-color: #FAFBF6;
     font-family: 'trashim_clmbold',Arial;
@@ -1017,6 +1017,11 @@ input.addBtn {
 	width: 14%;
 	margin-right: 5%;
 	margin-top: 60px;
+}
+
+.userClass img{
+	height: 100px;
+	width:100px;
 }
 
 .orange{
