--- a/includes/style.css
+++ b/includes/style.css
@@ -870,6 +870,7 @@ input.addBtn {
     width: 15%;
     margin-top: 50px;
     margin-right: 30px;
+    color: #FFFFFF;
 }
   
    #myscore {
@@ -943,8 +944,6 @@ input.addBtn {
   	margin:1%;
   }
  
- 
- 
  #myPlaces{
  	float: right;
  	display: block;
@@ -968,11 +967,12 @@ input.addBtn {
   	width:15%;
   	float:right;
   	margin-top: 30px;
+  	color: #FFFFFF;
   }
  
  #lastPlaces > div > div:first-child{
  	margin-right:5%;
- 	width:15%
+ 	width:15%;
  }
  
    #lastPlaces > div > div:nth-child(2){
@@ -1048,6 +1048,34 @@ input.addBtn {
   float:right;
 }
 
+.stats{
+    float: right;
+    color: #FFFFFF;
+    margin-top: 125px;
+    margin-right: -80px;
+    font-size: 27px;
+  }
+
+.status1, 
+.status2,
+.status3,
+.status4{
+    float: right;
+    padding-left: 40px;
+}   
+
+.status2 {
+    color: #FF235A;
+}
+
+.status3 {
+    color:#4CFF67; 
+}
+
+.status4 {
+    color: #C425FF;
+}
+
 .link:hover {
   background: #a8a8a8;
   background-image: -moz-linear-gradient(top, #a8a8a8, #9c9c9c);
@@ -1068,8 +1096,10 @@ input.addBtn {
 	width:100%;
 	height:60px;
 }
+
 .links{
 	height:15px;
 	float:right;
 	margin:15px;
 }
+
