--- a/includes/style.css
+++ b/includes/style.css
@@ -82,20 +82,23 @@ main{
 
 
 /*homepage- main */
+
+/*
 .filter{
 	height:30px;
 	width:60px;
-	position: absolute;
 	float:right;
 	padding-right:20px;
 	margin-top:10px;	
+	border-radius: 5px;
 }
-
+*/
 
 #helloUser {
     float: left;
     color: #FFFFFF;
     margin-top:80px;
+	width: 200px;
 }
 
 #helloUser img{
@@ -136,6 +139,10 @@ h3{
 	width: 931px;
 }
 
+#filterType, #filterMusicTarget {
+	border-radius: 5px;
+}
+
 .filterForm{
 	float:right;
 	position:absolute;
@@ -150,6 +157,7 @@ h3{
 	float:right;
 	margin-right:4px;
 	margin-left:20px;
+	font-family
 }
 
 .category{
@@ -178,7 +186,7 @@ h3{
 	display:inline-block;
 	cursor:pointer;
 	color:#777777;
-	font-family:'DJB Jenna',Arial;
+	font-family:Arial;
 	font-size:18px;
 	font-weight:bold;
 	padding:12px 16px;
@@ -220,7 +228,7 @@ h3{
 	font-family:'trashim_clmbold','arial';
 	font-size:15px;
 	font-weight:bold;
-	padding:6px 24px;
+	padding:5px 20px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffee66;
 }
@@ -394,15 +402,16 @@ text-align: center;
     background: #FFFFFF;
     color: #000000;
     margin-top: -4px;
+    border-radius: 5px;
 }
 
 .placeForm input{
 	padding: 5px;
 	background: #FFFFFF; 
-	-webkit-border-radius: 5px;
 	border-radius: 5px; 
 	margin-right:100px;
 	color:#000000;
+	font-family:'trashim_clmbold','arial';
 }
 
 #tags{
@@ -427,7 +436,8 @@ text-align: center;
 input.addBtn{
 	width: 175px;
     box-sizing: border-box;
-    margin-right:0;
+    margin-right:0;font-family:'trashim_clmbold','arial';
+    
 }
 
 .placeForm textarea{
@@ -457,14 +467,14 @@ height: 108px;
 	position: relative;
 }
 
-.formFilter{
-	display: block;
-	float:right;
-    margin-top: 10px;
-	margin-right:10px;
-	border-radius: 5px;
-	height:25px;
-}
+.formFilter {
+    display: block;
+    float: right;
+    margin-top: 11px;
+    border-radius: 5px;
+    height: 22px;
+    margin-right: 26px;
+   }
 
 .categoryP{
 	float: right;
@@ -484,7 +494,6 @@ height: 108px;
 
 input.addBtn {
 	float:right;
-	margin-top: 10px;
 	-moz-box-shadow:inset 0px 1px 0px 0px #fff6af;
 	-webkit-box-shadow:inset 0px 1px 0px 0px #fff6af;
 	box-shadow:inset 0px 1px 0px 0px #fff6af;
@@ -575,21 +584,21 @@ input.addBtn {
 
 .addresses{
     margin-right: 338px;
-    margin-top: -180px;
+    margin-top: -100px;
     width: 200px;
     float: right;
 }
 
 #address{
 	margin-right: 338px;
-    margin-top: -160px;
+    margin-top: -80px;
     width: 200px;
     float: right;
 }
 
 #distance{
     margin-right: 562px;
-    margin-top: -165px;
+    margin-top: -85px;
     float: right;
 }
 
@@ -605,7 +614,7 @@ input.addBtn {
     border: 5px solid #FFFFFF;
     margin-top: 10px;
     margin-right: -1px;
-    width: 100px;
+    width: 165px;
 }
 
 .fileUpload {
@@ -837,12 +846,11 @@ input.addBtn {
     font-weight: bold;
     font-family: 'trashim_clmbold', Arial;
     font-size: 20px;
-    margin-right: 30px;
+    margin-right: 15px;
 }
 
 
 /*MyPage*/
-
  #myPage{
  	margin-top:200px;
  }
