--- a/includes/style.css
+++ b/includes/style.css
@@ -228,7 +228,7 @@ h3{
 	font-family:'trashim_clmbold','arial';
 	font-size:15px;
 	font-weight:bold;
-	padding:5px 20px;
+	padding:5px px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffee66;
 }
@@ -365,10 +365,10 @@ text-align: center;
 	margin-bottom: 25px;
 }
 
-.asideRating{
-	margin-right: 10px; 
-	margin-top: -85hellopx;
-	float:right;
+.asideRating {
+    margin-right: 10px;
+    margin-top: -85px;
+    float: right;
 }
 
 /**
@@ -470,7 +470,7 @@ height: 108px;
 .formFilter {
     display: block;
     float: right;
-    margin-top: 11px;
+    margin-top: 10px;
     border-radius: 5px;
     height: 22px;
     margin-right: 26px;
