--- a/includes/style.css
+++ b/includes/style.css
@@ -9,13 +9,6 @@
     font-style: normal;
 }
 
-@font-face {
-    font-family: 'DJB Jenna';
-    url('Jenna/DJB Jenna.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
 *{
  padding:0px;
  margin:0px;
@@ -26,7 +19,7 @@ header,section,aside,footer,a,nav{
 }
 
 body{
-	font-family: 'trashim_clmbold', Arial;
+	font-family:'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 	width:100%;
 	background-image: url(../images/background.jpg);
 }
@@ -51,25 +44,28 @@ a{
 	margin-top:10px;
 }
 
+/*
 .logout {
     float: left;
     border-radius: 4px;
     border: none;
-    margin: 2px 0px 0 2px;
+ 	margin: 2px 0px 0 -198px;
     height: 21px;
     width: 72px;
     background-image: url(../images/logout.jpg);
 }
+*/
 
 .logout2{
 	float: left;
     border-radius: 4px;
     border: none;
-    margin: 2px 0px 0 2px;
+    margin: 2px 0px 0 -198px;
     height: 21px;
     width: 72px;
     background-image: url(../images/logout.jpg);
 }
+
 header{
  width:1000px;
  height:100px;
@@ -117,7 +113,7 @@ h1{
 h3{
 	direction: rtl;
 	font-size: 20px;
-	font-family: 'trashim_clmbold','arial';
+	font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 	margin-bottom: 10px;
 	color:#FFFFFF;
 }
@@ -147,7 +143,7 @@ h3{
 	float:right;
 	position:absolute;
 	color:#ffec64;
-	font-family: 'trashim_clmbold','DJB Jenna','Arial';
+	font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 	display:inline;
 	margin-top:25px;
 }
@@ -157,8 +153,17 @@ h3{
 	float:right;
 	margin-right:4px;
 	margin-left:20px;
-	font-family
+	font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 }
+
+.changeAddress {
+    display: block;
+    float: right;
+    margin-top: 10px;
+    border-radius: 5px;
+    height: 22px;
+    margin-right:20px;
+ }
 
 .category{
 	display:inline;
@@ -186,7 +191,7 @@ h3{
 	display:inline-block;
 	cursor:pointer;
 	color:#777777;
-	font-family:Arial;
+	font-family:'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 	font-size:18px;
 	font-weight:bold;
 	padding:12px 16px;
@@ -225,10 +230,10 @@ h3{
 	display:inline-block;
 	cursor:pointer;
 	color:#333333;
-	font-family:'trashim_clmbold','arial';
+	font-family:'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 	font-size:15px;
 	font-weight:bold;
-	padding:5px px;
+	padding:5px 5px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffee66;
 }
@@ -255,7 +260,7 @@ h3{
 	margin-right: 50px;
 	margin-top:70px;
 	color: #FAFBF6;
-	font-family: 'trashim_clmbold','arial';
+	font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 }
 
 .crop{
@@ -330,7 +335,7 @@ text-align: center;
     margin-top: 92px;
     border-style: solid;
     border-color: #FAFBF6;
-    font-family: 'trashim_clmbold',Arial;
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
     border-width: 1px;
     height: 460px;
     width: 250px;
@@ -341,7 +346,7 @@ text-align: center;
     font-size: 20px;
     width: 100px;
     height: 50px;
-    font-family: 'trashim_clmbold','arial';
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
     color: #FAFBF6;
     margin-top: -25px;
     margin-right: 10px;
@@ -352,7 +357,7 @@ text-align: center;
     float: right;
     width: 100px;
     margin-top: -40px;
-    font-family: 'trashim_clmbold','arial';
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
     color: #FAFBF6;
     margin-right: 60px;
 }
@@ -384,7 +389,7 @@ text-align: center;
 	line-height: 40px;
 	position:absolute;
 	color:#ffec64;
-	font-family: 'trashim_clmbold','DJB Jenna','Arial';
+	font-family:'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 	display:block;
 	margin-top:25px;
 	margin-right: 30px;
@@ -411,7 +416,7 @@ text-align: center;
 	border-radius: 5px; 
 	margin-right:100px;
 	color:#000000;
-	font-family:'trashim_clmbold','arial';
+	font-family:'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 }
 
 #tags{
@@ -436,7 +441,8 @@ text-align: center;
 input.addBtn{
 	width: 175px;
     box-sizing: border-box;
-    margin-right:0;font-family:'trashim_clmbold','arial';
+    margin-right:0;
+    font-family:'trashim_clmbold', 'Architects Daughter', cursive, Arial;
     
 }
 
@@ -473,8 +479,7 @@ height: 108px;
     margin-top: 10px;
     border-radius: 5px;
     height: 22px;
-    margin-right: 26px;
-   }
+}
 
 .categoryP{
 	float: right;
@@ -482,7 +487,7 @@ height: 108px;
 }
 
 #autocomplete{
-	font-family: 'trashim_clmbold','arial';
+	font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 }
 
 .uploadPhoto{
@@ -512,7 +517,7 @@ input.addBtn {
 	display:inline-block;
 	cursor:pointer;
 	color:#333333;
-	font-family:'trashim_clmbold','arial';
+	font-family:'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 	font-size:15px;
 	font-weight:bold;
 	padding:6px 24px;
@@ -606,7 +611,7 @@ input.addBtn {
 	float:right;
 	margin-right:30px;
 	margin-top:-40px;
-	font-family:Arial;
+	font-family:'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 }
 
 #fileDisplayArea2 img {
@@ -625,7 +630,7 @@ input.addBtn {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: 'trashim_clmbold', Arial;
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
     font-weight: bold;
     padding: 5px 9px;
     text-decoration: none;
@@ -655,7 +660,7 @@ input.addBtn {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: 'trashim_clmbold', Arial;
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
     font-weight: bold;
     padding: 6px 36px;
     text-decoration: none;
@@ -700,7 +705,7 @@ input.addBtn {
 .checkInBTN {
 	float: left;
     margin: 45px 0 0 68px;
-	font-family: 'trashim_clmbold', Arial;
+	font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 	font-weight:800;
 	background-color: #DB9A02;
 	box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -742,7 +747,7 @@ input.addBtn {
 #rating legend{
 	color:#DB9A02;
     font-size: 20px;
-    font-family: 'trashim_clmbold', Arial;
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
     margin-right: 10px;
 }
 
@@ -801,7 +806,7 @@ input.addBtn {
     font-weight: bold;
     color: #DB9A02;
     font-size: 19px;
-    font-family: 'trashim_clmbold', Arial;
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 }
 
 #allrating {
@@ -811,7 +816,7 @@ input.addBtn {
     font-weight: bold;
     color: #FFFFFF;
     font-size: 19px;
-    font-family: 'DJB Jenna', Arial;
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 }
 
 .fb-like{
@@ -835,8 +840,7 @@ input.addBtn {
     size: 30px;
     padding: 5px;
     margin: 10px;
-    font-family: 'trashim_clmbold', Arial;
-}
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 
 #chooseTag{
      float: right;
@@ -844,7 +848,7 @@ input.addBtn {
     padding: 5px;
     margin-top: 40px;
     font-weight: bold;
-    font-family: 'trashim_clmbold', Arial;
+    font-family:'trashim_clmbold', 'Architects Daughter', cursive, Arial;
     font-size: 20px;
     margin-right: 15px;
 }
@@ -1047,7 +1051,7 @@ input.addBtn {
   -webkit-border-radius: 28;
   -moz-border-radius: 28;d
   border-radius: 28px;
-  font-family: Arial;
+  font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
   color: #f7ec18;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
