--- a/includes/style.css
+++ b/includes/style.css
@@ -26,7 +26,7 @@ header,section,aside,footer,a,nav{
 }
 
 body{
-	font-family: 'trashim_clmbold', Arial;
+	font-family: 'trashim_clmbold','Architects Daughter', cursive, Arial;
 	width:100%;
 	background-image: url(../images/background.jpg);
 }
@@ -117,7 +117,7 @@ h1{
 h3{
 	direction: rtl;
 	font-size: 20px;
-	font-family: 'trashim_clmbold','arial';
+	font-family: 'trashim_clmbold','Architects Daughter', cursive,'arial';
 	margin-bottom: 10px;
 	color:#FFFFFF;
 }
@@ -147,7 +147,7 @@ h3{
 	float:right;
 	position:absolute;
 	color:#ffec64;
-	font-family: 'trashim_clmbold','DJB Jenna','Arial';
+	font-family: 'trashim_clmbold', 'Architects Daughter', cursive,'Arial';
 	display:inline;
 	margin-top:25px;
 }
@@ -186,7 +186,7 @@ h3{
 	display:inline-block;
 	cursor:pointer;
 	color:#777777;
-	font-family:Arial;
+	font-family: 'Architects Daughter', cursive, Arial;
 	font-size:18px;
 	font-weight:bold;
 	padding:12px 16px;
@@ -255,7 +255,7 @@ h3{
 	margin-right: 50px;
 	margin-top:70px;
 	color: #FAFBF6;
-	font-family: 'trashim_clmbold','arial';
+	font-family: 'trashim_clmbold','Architects Daughter', cursive,'arial';
 }
 
 .crop{
@@ -330,7 +330,7 @@ text-align: center;
     margin-top: 92px;
     border-style: solid;
     border-color: #FAFBF6;
-    font-family: 'trashim_clmbold',Arial;
+    font-family: 'trashim_clmbold','Architects Daughter', cursive,Arial;
     border-width: 1px;
     height: 460px;
     width: 250px;
@@ -341,7 +341,7 @@ text-align: center;
     font-size: 20px;
     width: 100px;
     height: 50px;
-    font-family: 'trashim_clmbold','arial';
+    font-family: 'trashim_clmbold','Architects Daughter', cursive,'arial';
     color: #FAFBF6;
     margin-top: -25px;
     margin-right: 10px;
@@ -352,7 +352,7 @@ text-align: center;
     float: right;
     width: 100px;
     margin-top: -40px;
-    font-family: 'trashim_clmbold','arial';
+    font-family: 'trashim_clmbold','Architects Daughter', cursive,'arial';
     color: #FAFBF6;
     margin-right: 60px;
 }
@@ -384,7 +384,7 @@ text-align: center;
 	line-height: 40px;
 	position:absolute;
 	color:#ffec64;
-	font-family: 'trashim_clmbold','DJB Jenna','Arial';
+	font-family: 'trashim_clmbold','Architects Daughter', cursive,'Arial';
 	display:block;
 	margin-top:25px;
 	margin-right: 30px;
@@ -473,7 +473,6 @@ height: 108px;
     margin-top: 10px;
     border-radius: 5px;
     height: 22px;
-    margin-right: 26px;
    }
 
 .categoryP{
@@ -482,7 +481,7 @@ height: 108px;
 }
 
 #autocomplete{
-	font-family: 'trashim_clmbold','arial';
+	font-family: 'trashim_clmbold','Architects Daughter', cursive,'arial';
 }
 
 .uploadPhoto{
@@ -625,7 +624,7 @@ input.addBtn {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: 'trashim_clmbold', Arial;
+    font-family: 'trashim_clmbold','Architects Daughter', cursive, Arial;
     font-weight: bold;
     padding: 5px 9px;
     text-decoration: none;
@@ -655,7 +654,7 @@ input.addBtn {
     display: inline-block;
     cursor: pointer;
     color: #ffffff;
-    font-family: 'trashim_clmbold', Arial;
+    font-family: 'trashim_clmbold','Architects Daughter', cursive, Arial;
     font-weight: bold;
     padding: 6px 36px;
     text-decoration: none;
@@ -700,7 +699,7 @@ input.addBtn {
 .checkInBTN {
 	float: left;
     margin: 45px 0 0 68px;
-	font-family: 'trashim_clmbold', Arial;
+	font-family: 'trashim_clmbold','Architects Daughter', cursive, Arial;
 	font-weight:800;
 	background-color: #DB9A02;
 	box-shadow:inset 0px 1px 0px 0px #ffffff;
@@ -742,7 +741,7 @@ input.addBtn {
 #rating legend{
 	color:#DB9A02;
     font-size: 20px;
-    font-family: 'trashim_clmbold', Arial;
+    font-family: 'trashim_clmbold','Architects Daughter', cursive, Arial;
     margin-right: 10px;
 }
 
@@ -801,7 +800,7 @@ input.addBtn {
     font-weight: bold;
     color: #DB9A02;
     font-size: 19px;
-    font-family: 'trashim_clmbold', Arial;
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive,Arial;
 }
 
 #allrating {
@@ -811,7 +810,7 @@ input.addBtn {
     font-weight: bold;
     color: #FFFFFF;
     font-size: 19px;
-    font-family: 'DJB Jenna', Arial;
+    font-family:'Architects Daughter', cursive, Arial;
 }
 
 .fb-like{
@@ -835,7 +834,7 @@ input.addBtn {
     size: 30px;
     padding: 5px;
     margin: 10px;
-    font-family: 'trashim_clmbold', Arial;
+    font-family: 'trashim_clmbold', 'Architects Daughter', cursive, Arial;
 }
 
 #chooseTag{
@@ -844,7 +843,7 @@ input.addBtn {
     padding: 5px;
     margin-top: 40px;
     font-weight: bold;
-    font-family: 'trashim_clmbold', Arial;
+    font-family: 'trashim_clmbold','Architects Daughter', cursive, Arial;
     font-size: 20px;
     margin-right: 15px;
 }
@@ -1047,7 +1046,7 @@ input.addBtn {
   -webkit-border-radius: 28;
   -moz-border-radius: 28;d
   border-radius: 28px;
-  font-family: Arial;
+  font-family: 'Architects Daughter', cursive,Arial;
   color: #f7ec18;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
