--- a/includes/style.css
+++ b/includes/style.css
@@ -55,7 +55,7 @@ a{
     float: left;
     border-radius: 4px;
     border: none;
-    margin: 2px 0px 0 2px;
+    margin: 2px 0px 0 -197px;
     height: 21px;
     width: 72px;
     background-image: url(../images/logout.jpg);
@@ -65,7 +65,7 @@ a{
 	float: left;
     border-radius: 4px;
     border: none;
-    margin: 2px 0px 0 2px;
+    margin: 2px 0px 0 -197px;
     height: 21px;
     width: 72px;
     background-image: url(../images/logout.jpg);
@@ -141,6 +141,15 @@ h3{
 
 #filterType, #filterMusicTarget {
 	border-radius: 5px;
+}
+
+.changeAddress{
+    display: block;
+    float: right;
+    margin-top: 10px;
+    border-radius: 5px;
+    height: 22px;
+    margin-right:20px;
 }
 
 .filterForm{
@@ -228,7 +237,7 @@ h3{
 	font-family:'trashim_clmbold','arial';
 	font-size:15px;
 	font-weight:bold;
-	padding:5px px;
+	padding:5px 5px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #ffee66;
 }
@@ -796,7 +805,7 @@ input.addBtn {
 
 #currentRating {
     float: left;
-    margin: -28px 0 0 139px;
+    margin: -91px 0 0 131px;
     font-weight: bold;
     color: #DB9A02;
     font-size: 19px;
@@ -805,12 +814,11 @@ input.addBtn {
 
 #allrating {
     float: left;
-    display: inline;
-    margin: 15px 0 0 83px;
+    margin: 36px;
     font-weight: bold;
     color: #FFFFFF;
     font-size: 19px;
-    font-family:'Architects Daughter', cursive, Arial;
+    font-family: 'Architects Daughter', cursive, Arial;
 }
 
 .fb-like{
@@ -1097,6 +1105,7 @@ input.addBtn {
     margin-top: 20px;
     margin-right:5%;
     width:95%;
+    color:#FFFFFFF;
 }
 
 .line{
