--- a/includes/style.css
+++ b/includes/style.css
@@ -97,19 +97,9 @@ padding-bottom: 100px;
 
 /*homepage- main */
 
-/*
-.filter{
-	height:30px;
-	width:60px;
-	float:right;
-	padding-right:20px;
-	margin-top:10px;	
-	border-radius: 5px;
-}
-*/
-
 #helloUser {
     float: left;
+    font-family: 'Architects Daughter', cursive,'arial';
     color: #FFFFFF;
     margin-top:80px;
 	width: 200px;
@@ -1150,3 +1140,6 @@ div.ui-dialog-buttonset {
 .ui-dialog-content{
 	direction: rtl;
 }
+
+
+
