--- a/includes/style.css
+++ b/includes/style.css
@@ -106,6 +106,10 @@ padding-bottom: 100px;
 	height: 22px;
 }
 
+#helloUser > a{
+	font-family: 'trashim_clmbold','Architects Daughter', cursive, Arial;
+}
+
 #helloUser img{
     border-radius: 50%;
     height: 50px;
