--- a/includes/style.css
+++ b/includes/style.css
@@ -289,7 +289,6 @@ h3{
 	margin-left: 0;
 }
 
-
 #target > div:nth-child(3),
 #target > div:nth-child(4),
 #target > div:nth-child(5) {
@@ -323,6 +322,7 @@ text-align: center;
 .crop img{
 	width:100%;
 }
+
 .crop img:hover {
 	transform: scale( 1.1 );
 }
@@ -1145,5 +1145,65 @@ div.ui-dialog-buttonset {
 	direction: rtl;
 }
 
+@media (max-width:700px){
+	body{
+		width:100%;
+	}
+	
+	#wrapper{
+	 direction: rtl;
+	 margin: 0px auto;
+	 width:100%;;
+	}
+	
+	header{
+	 width:100%;
+	}
+	
+	main{
+	 width:100%;
+	}
+	
+	#filterTarget{
+		width: 100%;
+	}
+	
+	.filterBox{
+		width: 90%;
+	}
+	
+	.filterForm{
+		float:right;
+		margin-right:10%;
+	}
 
+	#indexAside{
+		width: 90%;
+	}
+	
+	.place {
+	    width:100%;
+	    overflow: hidden;
+	}
+	
+	.place img.landscapeImage {
+		height: Calc(100%);
+		width: 100%;
+	}
+	
+	.place a {
+	display: block;
+	height: Calc(100%);
+	text-align: center;
+	}
+	
+	.crop img{
+		width:100%;
+	}
+	
+	.crop img:hover {
+		transform: scale( 1.1 );
+	}
+
+}
 
