--- a/includes/style.css
+++ b/includes/style.css
@@ -1126,7 +1126,7 @@ div.ui-dialog-buttonset {
 	direction: rtl;
 }
 
-@media (max-width:700px){
+@media only screen and  (max-width:600px){
 	
 	body{
 		width:100%;
