--- a/includes/style.css
+++ b/includes/style.css
@@ -568,7 +568,7 @@ input.addBtn {
 
 #pic{
 	height: 240px;
-	margin(10px, 0 0 30px);
+	margin:10px, 0 0 30px;
 }
 
 
@@ -1148,8 +1148,8 @@ div.ui-dialog-buttonset {
 	}
 	
 	#target {
-	    width: 50%;
-	    margin-right: 25%;
+	    width: 70%;
+	    margin-right: 15%;
 	}
 	
 	.pageName{
@@ -1173,11 +1173,12 @@ div.ui-dialog-buttonset {
 		float:right;
 		border-style: none;
 	    width: 100%;
-	    margin-right: 25%;
+		margin-right: 25%;
 	}
 	
 	#pic{
 		width: 100%;
+		height: auto;
 	}
 	
 	#asideDescription{
@@ -1211,5 +1212,10 @@ div.ui-dialog-buttonset {
 		width:100%;
 	}
 	
+	#placePagePic{
+		width: 100%;
+		overflow: display;
+	}
+
 }
 
