--- a/includes/style.css
+++ b/includes/style.css
@@ -391,9 +391,9 @@ text-align: center;
 #fileDisplayArea img {
     border-radius: 5px;
     border: 5px solid white;
-    margin-top: 10px;
+    margin-top: 30px;
     margin-right: 100px;
-    width: 16c5px;
+    width: 165px;
 }
 
 .placeForm select {
@@ -1214,6 +1214,26 @@ div.ui-dialog-buttonset {
 		width:100%;
 	}
 	
-
+	/*addPlace Mobile*/
+	
+	.placeForm{
+		width:60%;
+		margin-right:20%;
+	}
+	
+	#fileDisplayArea img {
+	    width: 33%;
+	    margin-right: 20%;
+	}
+	
+	.rightSideForm{
+		width: 100%;
+	}
+	
+	.placeForm > form > div > div {
+		margin-top:30px;
+	}
+	
+	
 }
 
