--- a/includes/style.css
+++ b/includes/style.css
@@ -899,7 +899,7 @@ label[for="star5"]{
     width:60%;
  }
  
- #myPage h2 {
+ #myPage h3 {
   	color: #DB9A02;
     margin-top: 30px;
     margin-right: 30px;
@@ -1258,5 +1258,132 @@ div.ui-dialog-buttonset {
 		margin-bottom: 2%;
 	}
 
+	 #myPage{
+ 	margin-top:200px;
+ }
+  /* My Page*/
+  
+	#myPageTarget > div > h1 {
+	    color: #FFFFFF;
+	    margin-top: 30px;
+	    margin-right: 30px;
+	}
 	
+	.myName{
+		text-align: center;
+	}
+	
+	.myScoreH {
+		width: 30%;
+	}
+	  
+    #myscore {
+	 	width:10%;
+	 }
+	 
+	 #myStatus{
+	 	width: 40%;
+	 }
+	 
+	 #myStatus {
+		width:10%;
+	 }
+	 
+	 #checkins{
+	 	width: 100%;
+	 }
+	
+	 #checkins > div{
+	 	width:100%;
+	 }
+	 
+	#checkins > div > div{
+	  	width:15%;
+	  	float:right;
+	  }
+	 
+	 #checkins > div > div:first-child{
+	 	width:50%;
+	 	margin-right: 25%
+	 }
+	 
+	#checkins > div > div:nth-child(2){
+	  	width:95%;
+	  	margin-right:5%
+	}
+	
+	#checkins > div > div:nth-child(2) > div:nth-child(1){
+	  	width:40%;
+	 }
+	  
+	  #checkins > div > div:nth-child(2) > div:nth-child(2){
+	  	width:40%;
+	  }
+	 
+	  #checkins > div > div:nth-child(2) > div:nth-child(4){
+	  	width:100%;
+	  	text-align: center;
+	  	margin-bottom: 10%;
+	  	}
+	  
+	  #checkins img{
+	  	width: 100%;
+	  }
+	  
+	  #checkins span{
+	  	margin:1%;
+	  }
+	 
+	 #myPlaces{
+	 	width:100%;
+	 }
+	 
+	  #lastPlaces{
+	 	width: 100%;
+	 }
+	
+	 #lastPlaces > div{
+	 	float:right;
+	 	width:100%;
+	 }
+	 
+	  #lastPlaces > div > div{
+	  	width:15%;
+	  	float:right;
+	  	margin-top: 30px;
+	  	color: #FFFFFF;
+	  }
+	 
+	 #lastPlaces > div > div:first-child{
+	 	margin-right: 25%;
+	 	width: 50%;
+	 }
+	 
+	  #lastPlaces > div > div:nth-child(2){
+	  	width:95%;
+	  	margin-right:5%
+	}
+	
+	#lastPlaces > div > div:nth-child(2) > div:nth-child(1){
+	  	width:40%;
+	 }
+	  
+	  #lastPlaces > div > div:nth-child(2) > div:nth-child(2){
+	  	width:40%;
+	  }
+	 
+	  #lastPlaces > div > div:nth-child(2) > div:nth-child(4){
+	  	width:100%;
+	  	text-align: center;
+	  	margin-bottom: 5%;
+	  }
+	  
+	  #lastPlaces img{
+	  	width:100%;
+	  }
+	  
+	  #lastPlaces span{
+	  	margin:1%;
+	  }
+ 
 }
