--- a/includes/style.css
+++ b/includes/style.css
@@ -345,7 +345,7 @@ text-align: center;
 #indexAside h3 {
     direction: rtl;
     font-size: 20px;
-    width: 100px;
+    width: 145px;
     height: 50px;
     font-family: 'trashim_clmbold','Architects Daughter', cursive,'arial';
     color: #FAFBF6;
@@ -372,12 +372,6 @@ text-align: center;
 }
 
 
-/**
-#placeName{
-	height: 40px;
-	width:200px;
-}
-**/
 /*add Place*/
 .placeForm{
 	width:1000px;
@@ -650,7 +644,7 @@ input.addBtn {
     text-shadow: 0px 0px 0px #2b665e;
     float: right;
     margin-right: 0px;
-    margin-top: 95px;
+    margin-top: 120px;
 }
 
 .fileUpload input.upload {
@@ -1214,6 +1208,21 @@ h2{
 	display:none;
 }
 
+.waze2 {
+	width:40px;
+	margin-right:30px;
+	/*display:none;*/
+}
+
+.waze3 {
+	width:40px;
+	/*display:none;*/
+}
+
+.waze4 {
+	width:40px;
+	/*display:none;*/
+}
 
 /* end of desktop*/
 
@@ -1269,6 +1278,9 @@ h2{
 		margin-right: 17.5%;
 	}
 
+	.waze{
+		width:40px;
+	}
 	
 	#asideDescription{
 		text-align: center;
@@ -1367,7 +1379,7 @@ h2{
 	}
 	
 	.myScoreH {
-		width: 20%;
+		width: 25%;
 		font-size:15px;
 	}
 	  
@@ -1407,18 +1419,23 @@ h2{
 	  	margin-right:5%
 	}
 	
-	#checkins > div > div:nth-child(2) > div:nth-child(1){
-	  	width:40%;
+		#checkins > div > div:nth-child(2) > div:nth-child(1){
+	  	width:30%;
 	 }
 	  
 	  #checkins > div > div:nth-child(2) > div:nth-child(2){
-	  	width:40%;
+	  	width:30%;
 	  }
 	 
 	  #checkins > div > div:nth-child(2) > div:nth-child(4){
 	  	width:100%;
 	  	text-align: center;
-	  	margin-bottom: 10%;
+	  	margin-bottom: 5%;
+	  }
+	  	
+	  	.waze3{
+	  		float: left;
+	  		margin-top: -5px;
 	  	}
 	  
 	  #checkins img{
@@ -1460,11 +1477,11 @@ h2{
 	}
 	
 	#lastPlaces > div > div:nth-child(2) > div:nth-child(1){
-	  	width:40%;
+	  	width:30%;
 	 }
 	  
 	  #lastPlaces > div > div:nth-child(2) > div:nth-child(2){
-	  	width:40%;
+	  	width:30%;
 	  }
 	 
 	  #lastPlaces > div > div:nth-child(2) > div:nth-child(4){
